+overflow for sidebar, +kinda fixed modal, +working on list of students

--- a/src/features/classroom/Classroom.css
+++ b/src/features/classroom/Classroom.css
@@ -31,9 +31,8 @@ p, h2{
 }
 
 #classroom-cards{
-    padding-left: 30%;
-    padding-right: 30%;
-    padding-top: 20px;
+    /* margin-right: 30% !important; */
+    padding-top: 10px;
     align-content: center;
 }
 
@@ -48,6 +47,22 @@ p, h2{
 #comment-input{
     background-color: rgb(238,238,238);
     height:35px;
+    width: 70%;
     border: none;
 }
 
+#classroom-buttons{
+    margin-left: 20%;
+    width: 60%;
+    align-content: center;
+    /* background-color: PINK; */
+}
+
+#classroom-segment{
+    margin-left: 20%;
+    width: 60%;
+    align-content: center;
+    border: none;
+    height:100vh;
+    /* background-color: PINK; */
+}
